Added album details page
