# docs/openapi-mvp.yaml
@@ -294,6 +294,24 @@ paths:
       responses:
         "204":
           description: Added
+    get:
+      summary: List album photos
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+            format: uuid
+      responses:
+        "200":
+          description: Album photos
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Photo"
   /albums/{id}/items/{photoId}:
     delete:
       summary: Remove photo from album
